--- a/client/src/components/Signup/style.scss
+++ b/client/src/components/Signup/style.scss
@@ -1,85 +1,30 @@
-header {
-    margin: 0 0 2rem;
-    padding: 2rem 10%;
+#signin-form {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 0 3px 1px rgba(150, 150, 150, 0.8);
+    flex-direction: column;
+    width: 95%;
+    max-width: 600px;
+    margin: 5vh auto;
 
-    .header-logo {
-        width: 46px;
-    }
+    &>div {
+        display: flex;
+        justify-content: space-between;
+        margin: 1rem 0;
+        font-size: 1.3rem;
 
-    &.header-theme__light {
-        background-color: #DDD;
-    }
-
-    &.header-theme__dark {
-        background-color: #333;
-        color: #AAA;
-
-        nav {
-
-            a,
-            a:active,
-            a:visited,
-            .logout-link {
-                color: #DDD;
-
-                &:hover {
-                    text-shadow: 1px 1px 2px #DDD;
-                }
-            }
-
+        label {
+            flex: 0 8rem;
         }
 
-        .header-theme-toggle {
-            background-color: #AAA;
-            border-radius: 50%;
-        }
-    }
-
-    .header-theme-toggle {
-        display: inline-block;
-        vertical-align: text-bottom;
-        width: 1.8rem;
-        opacity: 0.8;
-        cursor: pointer;
-        transition: opacity 0.15s linear;
-
-        &:hover {
-            opacity: 1;
-        }
-    }
-
-    nav {
-        display: inline-block;
-        font-size: 1.5rem;
-        margin-right: 1rem;
-        vertical-align: bottom;
-
-        a,
-        a:active,
-        a:visited,
-        .logout-link {
-            text-decoration: none;
-            color: #333;
-            opacity: 0.5;
-            transition: all 0.15s linear;
-            margin: 0 1rem;
-            cursor: pointer;
-
-            &:hover {
-                opacity: 1;
-                text-shadow: 1px 1px 2px #555;
-            }
+        input {
+            flex: 1;
+            margin-left: 2rem;
         }
 
-        .logout-link {
-
-            display: inline;
-            margin: 0;
-            margin-left: 1rem;
+        button {
+            border-radius: 0.3rem;
+            padding: 0.5rem 2rem;
+            font-size: 1.6rem;
+            margin: 1rem auto;
         }
     }
 }
