everything up to now was a waste of time

--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -7,6 +7,14 @@ Input, textarea {
 }
 
 textarea {
-    height: 25%;
-    max-height: 200px;
+    height: 200px;
+    max-height: 400px;
+}
+
+.form-group {
+    text-align: center;
+}
+
+.btn {
+    object-position: center;
 }
