react form structure added

--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -1,3 +1,4 @@
+
 Input, textarea {
     display: flex;
     flex-direction: column;
@@ -16,5 +17,5 @@ textarea {
 }
 
 .btn {
-    object-position: center;
+    text-align: center;
 }
