spacing for button in create/style.scss

--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -1,4 +1,3 @@
-
 Input, textarea {
     display: flex;
     flex-direction: column;
@@ -12,10 +11,12 @@ textarea {
     max-height: 400px;
 }
 
-.form-group {
+.form-label {
     text-align: center;
 }
 
-.btn {
-    text-align: center;
+button {
+    display: flex;
+    margin: auto;
+    margin-top: 20px;
 }
