--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,4 +1,10 @@
-#app-shell {
+* {
   margin: 0;
   padding: 0;
+}
+
+.split-line {
+  display: inline-block;
+  margin-left: 37%;
+  margin-right: 25%;
 }
