--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -4,7 +4,7 @@
 }
 
 .split-line {
-  display: inline-block;
-  margin-left: 37%;
-  margin-right: 25%;
+  display: block;
+  align-content: center;
+  text-align: center;
 }
