--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,17 @@
+* {
+}
+
+body * {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: pink;
+  margin: 0;
+  padding: 0;
+  font-size: calc(12pt + 0.5vw);
+}
+
 body * {
   box-sizing: border-box;
 }
@@ -5,5 +19,4 @@ body * {
 body {
   margin: 0;
   padding: 0;
-  font-size: calc(12pt + 0.5vw);
 }
