--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,22 +1,14 @@
-* {
-}
-
 body * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: pink;
+  background-color: forestgreen;
   margin: 0;
   padding: 0;
   font-size: calc(12pt + 0.5vw);
 }
 
-body * {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
+body{
+  background-color: grey;
 }
