--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,12 +3,8 @@ body * {
 }
 
 body {
-  background-color: forestgreen;
   margin: 0;
   padding: 0;
   font-size: calc(12pt + 0.5vw);
-}
-
-body{
-  background-color: grey;
+  background-image: linear-gradient(to right, darkgoldenrod , grey);
 }
