--- a/client/src/components/Nav/style.scss
+++ b/client/src/components/Nav/style.scss
@@ -11,11 +11,11 @@ header {
     }
 
     &.header-theme__light {
-        background-image: linear-gradient(to right, grey , blueviolet);
+        background-image: linear-gradient(to right, black , blueviolet);
     }
 
     &.header-theme__dark {
-        background-image: linear-gradient(to right, grey , indigo);
+        background-image: linear-gradient(to right, black , indigo);
         color: #AAA;
 
         nav {
@@ -64,7 +64,7 @@ header {
         a:visited,
         .logout-link {
             text-decoration: none;
-            color: indigo;
+            color: black;
             opacity: 0.5;
             transition: all 0.15s linear;
             margin: 0 1rem;
