--- a/client/src/pages/Profile/style.scss
+++ b/client/src/pages/Profile/style.scss
@@ -20,13 +20,11 @@
         li {
             padding: 0;
             margin: 1rem 0;
-            color: #555;
-
             .display-user__label {
                 font-weight: bold;
                 margin-right: 1rem;
-                color: #000;
             }
         }
     }
+    color: grey;
 }
