--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -1,25 +1,30 @@
-*{
-    color: grey;
- }
- 
  Input, textarea {
     display: flex;
     flex-direction: column;
     width: 95%;
     max-width: 600px;
     margin: auto;
+    
+}
+
+Input, textarea, button {
+    border-style: inset;
+    border-width: 3px ;
+    border-color: purple;
+    background-color: lightgrey;
 }
 
 Label {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 25px;
+    margin-bottom: 8px;
+    color: grey;
 }
 
 textarea {
     height: 100px;
     max-height: 400px;
-    background-color: white;
 }
 
 .form-label {
@@ -31,8 +36,6 @@ button {
     border-radius: 0.3rem;
     padding: 0.5rem 2rem;
     font-size: 1.6rem;
+    color: purple;
     margin: 1rem auto;
     }
-
-
-
