--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -11,7 +11,7 @@ Input, textarea, button {
     border-style: inset;
     border-width: 3px ;
     border-color: purple;
-    background-color: lightgrey;
+    background-color: white;
 }
 
 Label {
@@ -19,7 +19,7 @@ Label {
     flex-direction: column;
     margin-top: 25px;
     margin-bottom: 8px;
-    color: grey;
+    color: white;
 }
 
 textarea {
