--- a/client/src/components/Nav/style.scss
+++ b/client/src/components/Nav/style.scss
@@ -23,7 +23,7 @@ header {
             a:active,
             a:visited,
             .logout-link {
-                color: blueviolet;
+                color: white;
                 &:hover {
                     text-shadow: 1px 1px 2px blueviolet;
                 }
@@ -62,7 +62,7 @@ header {
         a:visited,
         .logout-link {
             text-decoration: none;
-            color: black;
+            color: white;
             opacity: 0.5;
             transition: all 0.15s linear;
             margin: 0 1rem;
