--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,5 @@ body {
   margin: 0;
   padding: 0;
   font-size: calc(12pt + 0.5vw);
-  // background-image: linear-gradient(to right, #7f2900 ,#1e0a34 );
-  background-color: #7f2900;
+  background-color: rgb(254, 144, 0);
 }
