google fonts added

--- a/client/src/components/Nav/style.scss
+++ b/client/src/components/Nav/style.scss
@@ -87,8 +87,13 @@ h1, h6 {
     align-items: center;
     text-align: center;
     color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
     font-size: 50px;
+}
+
+h6 {
+    font-size: large;
 }
