--- a/client/src/components/Nav/style.scss
+++ b/client/src/components/Nav/style.scss
@@ -87,11 +87,15 @@ h1, h6 {
     align-items: center;
     text-align: center;
     color: white;
-    font-family: 'Roboto', sans-serif;
+    // font-family: 'Montserrat', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
+    // font-family: 'Roboto', sans-serif;
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 70px;
+    font-family: 'Cabin Sketch', sans-serif;
+    // font-family: 'Playfair Display SC', serif;
 }
 
 h6 {
