--- a/client/src/components/Signup/style.scss
+++ b/client/src/components/Signup/style.scss
@@ -10,6 +10,11 @@
         justify-content: space-between;
         margin: 1rem 0;
         font-size: 1.3rem;
+        // font-family: 'Montserrat', sans-serif;
+        // font-family: 'Nunito Sans', sans-serif;
+        font-family: 'Roboto', sans-serif;
+        text-align: top;
+
 
         label {
             flex: 0 8rem;
