home page polished

--- a/client/src/components/Login/style.scss
+++ b/client/src/components/Login/style.scss
@@ -4,6 +4,8 @@
     width: 95%;
     max-width: 600px;
     margin: 5vh auto;
+    font-family: 'Nunito Sans', sans-serif;
+
 
     &>div {
         display: flex;
