--- a/client/src/components/Nav/style.scss
+++ b/client/src/components/Nav/style.scss
@@ -88,7 +88,6 @@ h1, h6 {
     text-align: center;
     color: white;
     // font-family: 'Montserrat', sans-serif;
-    font-family: 'Nunito Sans', sans-serif;
     // font-family: 'Roboto', sans-serif;
 }
 
@@ -100,4 +99,10 @@ h1 {
 
 h6 {
     font-size: large;
+    font-family: 'Nunito Sans', sans-serif;
+
+}
+
+p {
+    font-family: 'Nunito Sans', sans-serif;
 }
