--- a/client/src/pages/Home/style.scss
+++ b/client/src/pages/Home/style.scss
@@ -1,7 +1,8 @@
 #home-page {
     h1 {
-        margin: 4rem auto;
+        margin: auto;
         text-align: center;
+        font-family: 'Cabin Sketch', sans-serif;
     }
 
     p {
