--- a/client/src/components/Signup/style.scss
+++ b/client/src/components/Signup/style.scss
@@ -10,9 +10,7 @@
         justify-content: space-between;
         margin: 1rem 0;
         font-size: 1.3rem;
-        // font-family: 'Montserrat', sans-serif;
-        // font-family: 'Nunito Sans', sans-serif;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Nunito Sans', sans-serif;
         text-align: top;
 
 
