--- a/client/src/components/Nav/style.scss
+++ b/client/src/components/Nav/style.scss
@@ -55,7 +55,9 @@ header {
         font-size: 1.5rem;
         margin-right: 1rem;
         vertical-align: bottom;
-        
+        font-family: 'Nunito Sans', sans-serif;
+        font-size: large;
+        padding: 0;    
     
         a,
         a:active,
@@ -65,7 +67,7 @@ header {
             color: white;
             opacity: 0.5;
             transition: all 0.15s linear;
-            margin: 0 1rem;
+            margin: .5rem;
             cursor: pointer;
 
             &:hover {
@@ -78,7 +80,7 @@ header {
         .logout-link {
             display: inline;
             margin: 0;
-            margin-left: 1rem;
+            margin-left: .5rem;
         }
     }
 }
@@ -103,6 +105,5 @@ h6 {
 
 }
 
-p {
-    font-family: 'Nunito Sans', sans-serif;
+.test {
 }
