myFilters page polished

--- a/client/src/pages/MyFilters/style.scss
+++ b/client/src/pages/MyFilters/style.scss
@@ -16,6 +16,7 @@
         max-width: 600px;
         margin: 2rem auto;
         list-style: none;
+        font-family: 'Nunito Sans', sans-serif;
 
         li {
             padding: 0;
