--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -7,6 +7,12 @@
     
 }
 
+Input::placeholder, textarea::placeholder {
+    font-family: 'Nunito Sans', sans-serif;
+    
+    opacity: 60%;
+}
+
 Input, textarea, button {
     border-style: inset;
     border-width: 3px ;
@@ -15,6 +21,7 @@ Input, textarea, button {
 }
 
 Label {
+    font-family: 'Nunito Sans', sans-serif;
     display: flex;
     flex-direction: column;
     margin-top: 25px;
@@ -39,3 +46,8 @@ button {
     color: purple;
     margin: 1rem auto;
     }
+
+    // .mb-3{
+    //     display: none;
+
+    // }
