tab header polished

--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -47,7 +47,7 @@ button {
     margin: 1rem auto;
     }
 
-    // .mb-3{
-    //     display: none;
-
-    // }
+    #new-thread {
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+    }
