--- a/client/src/pages/About/style.scss
+++ b/client/src/pages/About/style.scss
@@ -4,6 +4,11 @@
         text-align: center;
     }
 
+    p {
+        margin: 3rem auto;
+        width: 40%;
+    }
+
     .loading-data {
         width: 90%;
         max-width: 600px;
