--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -16,7 +16,6 @@ Input::placeholder, textarea::placeholder {
 Input, textarea, button {
     border-style: inset;
     border-width: 3px ;
-    border-color: purple;
     background-color: white;
 }
 
@@ -51,3 +50,17 @@ button {
         margin-top: 4rem;
         margin-bottom: 4rem;
     }
+
+.submit {
+    display: flex;
+    border-radius: 0.3rem;
+    padding: 0.5rem 2rem;
+    font-size: 1.6rem;
+    color: purple;
+    margin: 1rem auto;
+    background-color: white;
+    }
+
+.submit:hover {
+    background-color: indigo;
+}
