login and signup buttons fixed

--- a/client/src/components/Login/style.scss
+++ b/client/src/components/Login/style.scss
@@ -30,6 +30,12 @@
             color: purple;
             margin: 1rem auto;
             }
+
+            button:hover {
+                background-color: indigo;
+                color: white;
+            }
+
     }
     color: white;
 }
