--- a/client/src/pages/Create/style.scss
+++ b/client/src/pages/Create/style.scss
@@ -1,10 +1,9 @@
- Input, textarea {
+Input, textarea, #formParticipants {
     display: flex;
     flex-direction: column;
     width: 95%;
     max-width: 600px;
     margin: auto;
-    
 }
 
 Input::placeholder, textarea::placeholder {
